--- a/src/test/resources/environment.properties
+++ b/src/test/resources/environment.properties
@@ -3,27 +3,31 @@
 # and open the template in the editor.
 
 firefox.webdriver.name=webdriver.gecko.driver
-firefox.webdriver.value=./drivers\\geckodriver.exe
+#firefox.webdriver.value=./drivers//geckodriver.exe
+firefox.webdriver.value=./drivers//geckodriver.exe
 
 chrome.webdriver.name=webdriver.chrome.driver
-chrome.webdriver.value=./drivers\\chromedriver.exe
+chrome.webdriver.value=./drivers//chromedriver.exe
 
 
 ie.webdriver.name=webdriver.ie.driver
-ie.webdriver.value=./drivers\\IEDriverServer.exe
+ie.webdriver.value=./drivers//IEDriverServer.exe
+
+edge.webdriver.name=webdriver.edge.driver
+edge.webdriver.value=./driverss//msedgedriver.exe
 
 website.url = https://www.ilabquality.com
-datafile_url =./data_files\\test_cases.xlsx
-user.details= ./data_files\\data.csv
+datafile_url =./data_files//test_cases.xlsx
+user.details= ./data_files//data.csv
 
-data.access = database
-#data.access = csv_file
+#data.access = database
+data.access = csv_file
 
 
 #################Postgres Database Connection ##############################
 
 hibernate.connection.driver_class=org.postgresql.Driver
-hibernate.connection.url=jdbc:postgresql://localhost:5432/postgres
-hibernate.connection.username=postgres
-hibernate.connection.password=admin
+hibernate.connection.url=jdbc:postgresql://localhost:5432/...
+hibernate.connection.username=..
+hibernate.connection.password=..
 hibernate.current_session_context_class=thread
